# SoapyFileSDR

./: CMakeLists.txt  LICENSE.txt  README.md  Registration.cpp  Settings.cpp  SoapyFileSDR.hpp  Streaming.cpp  poke.sh  send-file.sh  test-io.sh
